Maven dependency normalization