@@ -9,7 +9,6 @@
     <relativePath>../trellis-parent</relativePath>
   </parent>
 
-
   <groupId>org.trellisldp</groupId>
   <artifactId>trellis-jwt</artifactId>
   <version>0.20.0-SNAPSHOT</version>
@@ -19,6 +18,18 @@
       Trellis LDP MicroProfile JWT module
   </description>
   <packaging>jar</packaging>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.eclipse.microprofile</groupId>
+        <artifactId>microprofile</artifactId>
+        <version>${microprofile.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <dependencies>
     <dependency>
@@ -32,14 +43,23 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.eclipse.microprofile</groupId>
-      <artifactId>microprofile</artifactId>
-      <type>pom</type>
+      <groupId>jakarta.platform</groupId>
+      <artifactId>jakarta.jakartaee-core-api</artifactId>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>jakarta.xml.bind</groupId>
       <artifactId>jakarta.xml.bind-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.microprofile.config</groupId>
+      <artifactId>microprofile-config-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.microprofile.jwt</groupId>
+      <artifactId>microprofile-jwt-auth-api</artifactId>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -107,7 +127,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <argLine>
-              --add-modules jakarta.el
+              <!-- add-modules jakarta.eli -->
               --add-opens java.base/java.lang=ALL-UNNAMED
           </argLine>
         </configuration>
